# ShinySC

./: README.md  main.py  pyproject.toml  setup.py  statcan_hacking.ipynb
ShinySC/: __init__.py  main.py
ShinySC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
