[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ShinySC"
version = "0.1.4"
description = "This helps you build queries to download custom datatables from Statistics Canada. Ideal for use in data pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Statistics Canada","StatCan","StatsCan","API"]
authors = [
  {name = "Kyle Lillie"},
]
dependencies = [
  "requests>=2.28.0",
  "xmltodict",
  "urllib",
  "json",
  "datetime"
]